Fix potential overflow on scroll caused by tooltips

--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -32,3 +32,7 @@
 		grid-area: main;
 	}
 }
+
+#main-content {
+	position: relative;
+}
